--- a/exercicio3/style.css
+++ b/exercicio3/style.css
@@ -3,6 +3,14 @@
   padding: 0;
 }
 
+body{
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+}
+
 main{
   display: flex;
   gap: 20px;
@@ -10,6 +18,9 @@ main{
   width: 800px;
   margin: 0 auto;
   background-color: orange;
+  justify-content:space-around;
+  align-items: center;
+
 }
 
 section{
@@ -26,13 +37,18 @@ section{
 }
 
 #section-2{
+  flex-grow: 2;
 }
 
 #section-3{
+  flex-grow: 3;
 }
 
 #section-4{
+  flex-basis: 200px;
+  
 }
 
 #section-5{
+  order: -1;
 }
